# winlibsquash

./: CMakeLists.txt  README.md
examples/: squash_extract.c  squash_info.c  squash_ls.c
include/libsquash/: squash.h  squash_errors.h  squash_types.h
src/: squash_decompressor.c  squash_directory.c  squash_errors.c  squash_file.c  squash_inode.c  squash_reader.c  squash_utils.c  squash_visited.c
